# TP2-interface-db-EDU

./: CMakeLists.txt
headers/: IGeoColumn.h  IGeoColumns.h  IGeoComponents.h  IGeoConnectDB.h  IGeoInterface.h  IGeoListInterface.h  IGeoProject.h  IGeoProjects.h  IGeoTable.h  IGeoTables.h
res/: GeoDataInterfaces.pas  dllimport.pas
src/: main.cpp
